# fbd_LoRA

./: .env.example  .gitignore  CLAUDE.md  README_EXPERIMENTS.md  pyproject.toml  requirements.txt
configs/accelerate/: imagen_3gpu.yaml  multi_gpu_ddp.yaml
configs/imagen/: customconcept101_fbd.yaml  dreambench_fbd.yaml
configs/imagen/baselines/: lora_dreambooth.yaml
configs/imagen/dreambench/: custom_diffusion.yaml  diffusekrona.yaml  dreambooth.yaml  fbd.yaml  lora.yaml  svdiff.yaml
configs/nlg/: metamath_fbd.yaml
configs/nlg/baselines/: lora.yaml
configs/nlg/code/: adalora.yaml  dora.yaml  fbd.yaml  lora.yaml  lora_ga.yaml  pissa.yaml
configs/nlg/conversation/: adalora.yaml  dora.yaml  fbd.yaml  lora.yaml  lora_ga.yaml  pissa.yaml
configs/nlg/metamath/: adalora.yaml  dora.yaml  fbd.yaml  lora.yaml  lora_ga.yaml  pissa.yaml
experiments/imagen/customconcept101/: eval_clip_dino.sh  generate.sh  run_all.sh  train_fbd.sh  train_lora.sh
experiments/imagen/dreambench/: eval_clip_dino.sh  generate.sh  run_all.sh  train_fbd.sh  train_lora.sh
experiments/nlg/metamath/: eval_gsm8k.sh  train_fbd.sh  (+1 more)
external_repos/: .gitkeep
scripts/: smoke_test_imagen.sh  smoke_test_nlg.sh
scripts/common/: run_experiment.sh
src/fbd_lora/: __init__.py  checkpointing.py  config.py  gdrive.py  logging_utils.py  naming.py  secrets.py  seed.py
tests/: test_backward_routing.py  test_checkpoint_naming.py  test_config_loading.py  test_dreambench_plus_loader.py  test_forward_equivalence.py  test_gdrive_sync_dryrun.py  test_merge_equivalence.py  test_psd_routing.py
(+80 files in other folders)
