[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fbd-lora"
version = "0.1.0"
requires-python = ">=3.10"
description = "Forward-Backward Decoupled Low-Rank Adaptation"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
